@@ -1,3 +1,5 @@
-$ ~/Downloads/jdk-19.jdk/Contents/Home/bin/javac src/fruit/adt/example/Main.java -d target --enable-preview -source 19
+Java 19 code for [Sum and Product Types - The Fruit Salad & Fruit Snack Example - From F# to Haskell, Scala and Java](https://www.slideshare.net/pjschwarz/sum-and-product-types-the-fruit-salad-fruit-snack-example-from-f-to-haskell-scala-and-java)
 
-$ ~/Downloads/jdk-19.jdk/Contents/Home/bin/java -ea --enable-preview -classpath target fruit.adt.example.Main 
+---
+
+![Sum and Product Types - The Fruit Salad & Fruit Snack Example - From F# to Haskell, Scala and Java](image/sum-and-product-types-the-fruit-salad-and-fruit-snack-example-from-f-sharp-to-haskell-scala-java.png?raw=true)
